--- a/index.html
+++ b/index.html
@@ -1,1 +1,49 @@
-Hello world!
+<!DOCTYPE html>
+<html>
+
+<head>
+   <meta name=" viewpoint" content="with=device-width, inital-scale=1.0">
+   <title> Concinnity</title>
+   <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+
+   <section class="header">
+      <h1>Concinnity</h1>
+   </section>
+   <ul class="nav">
+      <li class="nav-item dropdown">
+         <a href="javascript:void(0)" class="dropbtn">My Work</a>
+         <div class="dropdown-content">
+            <a href="#">To be added...</a>
+         </div>
+      </li>
+      <li class="nav-item dropdown">
+         <a href="javascript:void(0)" class="dropbtn">Book Recommendations</a>
+         <div class="dropdown-content categories">
+         </div>
+      </li>
+      <li class="nav-item dropdown">
+         <a href="javascript:void(0)" class="dropbtn">Art</a>
+         <div class="dropdown-content">
+            <a href="#">Digital</a>
+            <a href="#">Painting</a>
+            <a href="#">Music</a>
+            <a href="#">Sketching</a>
+         </div>
+      </li>
+
+      <li class="nav-item dropdown">
+         <a href="javascript:void(0)" class="dropbtn">Liturature</a>
+         <div class="dropdown-content">
+            <a href="#">Link 1</a>
+            <a href="#">Link 2</a>
+            <a href="#">Link 3</a>
+         </div>
+      </li>
+   </ul>
+   <script src="./dropdown.js" ></script>
+</body>
+
+</html>
