--- a/index.html
+++ b/index.html
@@ -7,9 +7,14 @@
    <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body class="home">
    <script id="replace_with_navbar" src="/nav.js"></script>
    <script src="./dropdown.js"></script>
+
+<div class="boring">
+Welcome to my website... It is a place where I can sort books I have read, and give people easy access to my mostest favouritist books.
+</div> 
+
 </body>
 
 </html>
