--- a/art/index.html
+++ b/art/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body class="art">
-   <script id="replace_with_navbar" src="/nav.js"></script>
+   <script id="replace_with_navbar" src="./nav.js"></script>
    <article>
         <h1>Art</h1>
    </article>
