--- a/mywork/index.html
+++ b/mywork/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body class="bookrec">
-    <script id="replace_with_navbar" src="/nav.js"></script>
+    <script id="replace_with_navbar" src="./nav.js"></script>
     <section id="books">
 
     </section>
