--- a/art/index.html
+++ b/art/index.html
@@ -4,11 +4,11 @@
 <head>
    <meta name=" viewpoint" content="with=device-width, inital-scale=1.0">
    <title> Concinnity</title>
-   <link rel="stylesheet" href="../style.css">
+   <link rel="stylesheet" href="./website/style.css">
 </head>
 
 <body class="art">
-   <script id="replace_with_navbar" src="./nav.js"></script>
+   <script id="replace_with_navbar" src="/website/nav.js"></script>
    <article>
         <h1>Art</h1>
    </article>
