--- a/nav.html
+++ b/nav.html
@@ -11,11 +11,11 @@
     <li class="nav-item dropdown">
         <a href="javascript:void(0)" class="dropbtn">Book Recommendations</a>
         <div class="dropdown-content categories">
-            <a href="/bookrec/?category=Fantasy">Fantasy</a>
-            <a href="/bookrec/?category=Murdermystery">Murder Mystery</a>
-            <a href="/bookrec/?category=Romance">Romance</a>
-            <!-- <a href="/bookrec/?category=Scifi">Science Fiction</a> -->
-            <a href="/bookrec/?category=Mystery">Mystery</a>
+            <a href="/bookrecrec/?category=Fantasy">Fantasy</a>
+            <a href="/bookrecrec/?category=Murdermystery">Murder Mystery</a>
+            <a href="/bookrecrec/?category=Romance">Romance</a>
+            <!-- <a href="/bookrecrec/?category=Scifi">Science Fiction</a> -->
+            <a href="/bookrecrec/?category=Mystery">Mystery</a>
         </div>
     </li>
     <li class="nav-item dropdown">
@@ -36,4 +36,4 @@
         </div>
     </li>
 </ul>
-<script defer src="/dropdown.js" ></script>
+<script defer src="/website/dropdown.js" ></script>
