--- a/nav.html
+++ b/nav.html
@@ -5,17 +5,17 @@
     <li class="nav-item dropdown">
         <a href="javascript:void(0)" class="dropbtn">My Work</a>
         <div class="dropdown-content categories">
-            <a href="/mywork/?category=testing">To Be Added...</a>
+            <a href="/website/mywork/?category=testing">To Be Added...</a>
         </div>
     </li>
     <li class="nav-item dropdown">
         <a href="javascript:void(0)" class="dropbtn">Book Recommendations</a>
         <div class="dropdown-content categories">
-            <a href="/bookrecrec/?category=Fantasy">Fantasy</a>
-            <a href="/bookrecrec/?category=Murdermystery">Murder Mystery</a>
-            <a href="/bookrecrec/?category=Romance">Romance</a>
-            <!-- <a href="/bookrecrec/?category=Scifi">Science Fiction</a> -->
-            <a href="/bookrecrec/?category=Mystery">Mystery</a>
+            <a href="/website/bookrec/?category=Fantasy">Fantasy</a>
+            <a href="/website/bookrec/?category=Murdermystery">Murder Mystery</a>
+            <a href="/website/bookrec/?category=Romance">Romance</a>
+            <!-- <a href="/website/bookrec/?category=Scifi">Science Fiction</a> -->
+            <a href="/website/bookrec/?category=Mystery">Mystery</a>
         </div>
     </li>
     <li class="nav-item dropdown">
