--- a/art/index.html
+++ b/art/index.html
@@ -4,7 +4,7 @@
 <head>
    <meta name=" viewpoint" content="with=device-width, inital-scale=1.0">
    <title> Concinnity</title>
-   <link rel="stylesheet" href="./website/style.css">
+   <link rel="stylesheet" href="/website/style.css">
 </head>
 
 <body class="art">
