change repo name

--- a/nav.html
+++ b/nav.html
@@ -1,31 +1,31 @@
 <section class="header">
     <h1>Concinnity</h1>
- </section>
+</section>
 <ul class="nav">
     <li class="nav-item dropdown">
         <a href="javascript:void(0)" class="dropbtn">My Work</a>
         <div class="dropdown-content categories">
-            <a href="/website/mywork/?category=testing">To Be Added...</a>
+            <a href="//mywork/?category=testing">To Be Added...</a>
         </div>
     </li>
     <li class="nav-item dropdown">
         <a href="javascript:void(0)" class="dropbtn">Book Recommendations</a>
         <div class="dropdown-content categories">
-            <a href="/website/bookrec/?category=Fantasy">Fantasy</a>
-            <a href="/website/bookrec/?category=Murdermystery">Murder Mystery</a>
-            <a href="/website/bookrec/?category=Romance">Romance</a>
-            <!-- <a href="/website/bookrec/?category=Scifi">Science Fiction</a> -->
-            <a href="/website/bookrec/?category=Mystery">Mystery</a>
+            <a href="//bookrec/?category=Fantasy">Fantasy</a>
+            <a href="//bookrec/?category=Murdermystery">Murder Mystery</a>
+            <a href="//bookrec/?category=Romance">Romance</a>
+            <a href="//bookrec/?category=Scifi">Science Fiction</a>
+            <a href="//bookrec/?category=Mystery">Mystery</a>
         </div>
     </li>
     <li class="nav-item dropdown">
         <a href="javascript:void(0)" class="dropbtn">Art</a>
         <div class="dropdown-content">
             <a href="#">To Be Added...</a>
-            <!-- <a href="/art/?category=digital">Digital</a>
+            <a href="/art/?category=digital">Digital</a>
             <a href="/art/?category=painting">Painting</a>
             <a href="/art/?category=music">Music</a>
-            <a href="/art/?category=sketching">Sketching</a> -->
+            <a href="/art/?category=sketching">Sketching</a>
         </div>
     </li>
 
@@ -36,4 +36,4 @@
         </div>
     </li>
 </ul>
-<script defer src="/website/dropdown.js" ></script>
+<script defer src="//dropdown.js"></script>
