--- a/art/index.html
+++ b/art/index.html
@@ -4,13 +4,13 @@
 <head>
    <meta name=" viewpoint" content="with=device-width, inital-scale=1.0">
    <title> Concinnity</title>
-   <link rel="stylesheet" href="/website/style.css">
+   <link rel="stylesheet" href="//style.css">
 </head>
 
 <body class="art">
-   <script id="replace_with_navbar" src="/website/nav.js"></script>
+   <script id="replace_with_navbar" src="//nav.js"></script>
    <article>
-        <h1>Art</h1>
+      <h1>Art</h1>
    </article>
    <section id="art">
 
@@ -19,12 +19,12 @@
       const params = new URLSearchParams(window.location.search);
       const category = params.get("category").toLowerCase();
       fetch('./' + category + '.html')
-      .then(res => res.text())
-      .then(text => {
-         let art = document.querySelector("#art");
-         art.innerHTML = text;
-      })
- </script>
+         .then(res => res.text())
+         .then(text => {
+            let art = document.querySelector("#art");
+            art.innerHTML = text;
+         })
+   </script>
 </body>
 
 </html>
