--- a/index.html
+++ b/index.html
@@ -4,17 +4,16 @@
 <head>
    <meta name=" viewpoint" content="with=device-width, inital-scale=1.0">
    <title> Concinnity</title>
-   <link rel="stylesheet" href="/website/style.css">
+   <link rel="stylesheet" href="//style.css">
 </head>
 
 <body class="home">
-   <script id="replace_with_navbar" src="/website/nav.js"></script>
+   <script id="replace_with_navbar" src="//nav.js"></script>
    <script src="./dropdown.js"></script>
 
-<div class="boring">
-Welcome to my website... It is a place where I can sort books I have read, and give people easy access to my mostest favouritist books.
-</div> 
-
+   <div class="boring">
+      Welcome to my website...
+   </div>
 </body>
 
 </html>
