change repo name

--- a/bookrec/mystery.html
+++ b/bookrec/mystery.html
@@ -15,7 +15,7 @@
                 e. lockhart
             </div>
             <div class="buy">
-                <a href="https://www.amazon.ca/We-Were-Liars-Lockhart/dp/0385741278/ref=sr_1_1?crid=3G0LTJZTH0YJN&keywords=we+were+liars&qid=1659721371&s=books&sprefix=we+were+liars%2Cstripbooks%2C84&sr=1-1"
+                <a href="https:/www.amazon.ca/We-Were-Liars-Lockhart/dp/0385741278/ref=sr_1_1?crid=3G0LTJZTH0YJN&keywords=we+were+liars&qid=1659721371&s=books&sprefix=we+were+liars%2Cstripbooks%2C84&sr=1-1"
                     target="_blank">Buy On Amazon!</a>
             </div>
         </div>
@@ -32,7 +32,7 @@
                 William Ritter
             </div>
             <div class="buy">
-                <a href="https://www.amazon.ca/Jackaby-William-Ritter/dp/1616205466/ref=asc_df_1616205466?tag=bingshopdesk-20&linkCode=df0&hvadid=80539318303498&hvnetw=o&hvqmt=e&hvbmt=be&hvdev=c&hvlocint=&hvlocphy=&hvtargid=pla-4584138873278202&psc=1"
+                <a href="https:/www.amazon.ca/Jackaby-William-Ritter/dp/1616205466/ref=asc_df_1616205466?tag=bingshopdesk-20&linkCode=df0&hvadid=80539318303498&hvnetw=o&hvqmt=e&hvbmt=be&hvdev=c&hvlocint=&hvlocphy=&hvtargid=pla-4584138873278202&psc=1"
                     target="_blank">Buy On Amazon!</a>
             </div>
         </div>
