--- a/bookrec/romance.html
+++ b/bookrec/romance.html
@@ -15,7 +15,7 @@
                 Colleen Hoover
             </div>
             <div class="buy">
-                <a href="https://www.amazon.ca/Ends-Us-Novel-Colleen-Hoover/dp/1501110365/ref=sr_1_1?crid=2WQU5QAY5216N&keywords=it+ends+with+us+colleen+hoover&qid=1659714743&sprefix=it+ends+with+us%2Caps%2C90&sr=8-1"
+                <a href="https:/www.amazon.ca/Ends-Us-Novel-Colleen-Hoover/dp/1501110365/ref=sr_1_1?crid=2WQU5QAY5216N&keywords=it+ends+with+us+colleen+hoover&qid=1659714743&sprefix=it+ends+with+us%2Caps%2C90&sr=8-1"
                     target="_blank">Buy On Amazon!</a>
             </div>
         </div>
@@ -32,7 +32,7 @@
                 Christina Lauren
             </div>
             <div class="buy">
-                <a href="https://www.amazon.ca/Unhoneymooners-Christina-Lauren/dp/1501128035/ref=sr_1_1?crid=NCLVSCR8GE1W&keywords=the+unhoneymooners&qid=1659720517&s=books&sprefix=unh%2Cstripbooks%2C141&sr=1-1"
+                <a href="https:/www.amazon.ca/Unhoneymooners-Christina-Lauren/dp/1501128035/ref=sr_1_1?crid=NCLVSCR8GE1W&keywords=the+unhoneymooners&qid=1659720517&s=books&sprefix=unh%2Cstripbooks%2C141&sr=1-1"
                     target="_blank">Buy On Amazon!</a>
             </div>
         </div>
