--- a/bookrec/fantasy.html
+++ b/bookrec/fantasy.html
@@ -15,7 +15,7 @@
                 Leigh Bardugo
             </div>
             <div class="buy">
-                <a href="https://www.amazon.ca/Shadow-Bone-Leigh-Bardugo/dp/1250027438/ref=asc_df_1250027438?tag=bingshopdesk-20&linkCode=df0&hvadid=80539318303638&hvnetw=o&hvqmt=e&hvbmt=be&hvdev=c&hvlocint=&hvlocphy=&hvtargid=pla-4584138873361727&psc=1" target="_blank">Buy On Amazon!</a>
+                <a href="https:/www.amazon.ca/Shadow-Bone-Leigh-Bardugo/dp/1250027438/ref=asc_df_1250027438?tag=bingshopdesk-20&linkCode=df0&hvadid=80539318303638&hvnetw=o&hvqmt=e&hvbmt=be&hvdev=c&hvlocint=&hvlocphy=&hvtargid=pla-4584138873361727&psc=1" target="_blank">Buy On Amazon!</a>
             </div>
         </div>
     </div>
@@ -34,7 +34,7 @@
             Leigh Bardugo
         </div>
         <div class="buy">
-            <a href="https://www.amazon.ca/Siege-Storm-Leigh-Bardugo/dp/125004443X/ref=pd_lpo_1?pd_rd_i=125004443X&psc=11" target="_blank">Buy On Amazon!</a>
+            <a href="https:/www.amazon.ca/Siege-Storm-Leigh-Bardugo/dp/125004443X/ref=pd_lpo_1?pd_rd_i=125004443X&psc=11" target="_blank">Buy On Amazon!</a>
         </div>
     </div>
 </div>
