--- a/bookrec/mentalhealth.html
+++ b/bookrec/mentalhealth.html
@@ -16,7 +16,7 @@
                 Colleen Hoover
             </div>
             <div class="buy">
-                <a href="https://www.amazon.ca/Ends-Us-Novel-Colleen-Hoover/dp/1501110365/ref=sr_1_1?crid=2WQU5QAY5216N&keywords=it+ends+with+us+colleen+hoover&qid=1659714743&sprefix=it+ends+with+us%2Caps%2C90&sr=8-1" target="_blank">Buy On Amazon!</a>
+                <a href="https:/www.amazon.ca/Ends-Us-Novel-Colleen-Hoover/dp/1501110365/ref=sr_1_1?crid=2WQU5QAY5216N&keywords=it+ends+with+us+colleen+hoover&qid=1659714743&sprefix=it+ends+with+us%2Caps%2C90&sr=8-1" target="_blank">Buy On Amazon!</a>
             </div>
         </div>
     </div>
@@ -35,7 +35,7 @@
             Colleen Hoover
         </div>
         <div class="buy">
-            <a href="https://www.amazon.ca/Ends-Us-Novel-Colleen-Hoover/dp/1501110365/ref=sr_1_1?crid=2WQU5QAY5216N&keywords=it+ends+with+us+colleen+hoover&qid=1659714743&sprefix=it+ends+with+us%2Caps%2C90&sr=8-1" target="_blank">Buy On Amazon!</a>
+            <a href="https:/www.amazon.ca/Ends-Us-Novel-Colleen-Hoover/dp/1501110365/ref=sr_1_1?crid=2WQU5QAY5216N&keywords=it+ends+with+us+colleen+hoover&qid=1659714743&sprefix=it+ends+with+us%2Caps%2C90&sr=8-1" target="_blank">Buy On Amazon!</a>
         </div>
     </div>
 </div>
@@ -53,7 +53,7 @@
             Colleen Hoover
         </div>
         <div class="buy">
-            <a href="https://www.amazon.ca/Ends-Us-Novel-Colleen-Hoover/dp/1501110365/ref=sr_1_1?crid=2WQU5QAY5216N&keywords=it+ends+with+us+colleen+hoover&qid=1659714743&sprefix=it+ends+with+us%2Caps%2C90&sr=8-1" target="_blank">Buy On Amazon!</a>
+            <a href="https:/www.amazon.ca/Ends-Us-Novel-Colleen-Hoover/dp/1501110365/ref=sr_1_1?crid=2WQU5QAY5216N&keywords=it+ends+with+us+colleen+hoover&qid=1659714743&sprefix=it+ends+with+us%2Caps%2C90&sr=8-1" target="_blank">Buy On Amazon!</a>
         </div>
     </div>
 </div>
@@ -71,7 +71,7 @@
             Colleen Hoover
         </div>
         <div class="buy">
-            <a href="https://www.amazon.ca/Ends-Us-Novel-Colleen-Hoover/dp/1501110365/ref=sr_1_1?crid=2WQU5QAY5216N&keywords=it+ends+with+us+colleen+hoover&qid=1659714743&sprefix=it+ends+with+us%2Caps%2C90&sr=8-1" target="_blank">Buy On Amazon!</a>
+            <a href="https:/www.amazon.ca/Ends-Us-Novel-Colleen-Hoover/dp/1501110365/ref=sr_1_1?crid=2WQU5QAY5216N&keywords=it+ends+with+us+colleen+hoover&qid=1659714743&sprefix=it+ends+with+us%2Caps%2C90&sr=8-1" target="_blank">Buy On Amazon!</a>
         </div>
     </div>
 </div>
