--- a/bookrec/murdermystery.html
+++ b/bookrec/murdermystery.html
@@ -15,7 +15,7 @@
                 Karen M.McManus
             </div>
             <div class="buy">
-                <a href="https://www.amazon.ca/One-Us-Lying-Karen-McManus/dp/1524714682/ref=pd_bxgy_img_sccl_1/146-9781728-1535001?pd_rd_w=lOmV9&content-id=amzn1.sym.17b2b149-58e2-4824-ba79-851c5f351fdc&pf_rd_p=17b2b149-58e2-4824-ba79-851c5f351fdc&pf_rd_r=NTYQ9ARK4D0MCEKGBAVQ&pd_rd_wg=ScLv0&pd_rd_r=b76ae723-28a7-444d-9e6a-1e4d91773331&pd_rd_i=1524714682&psc=1"
+                <a href="https:/www.amazon.ca/One-Us-Lying-Karen-McManus/dp/1524714682/ref=pd_bxgy_img_sccl_1/146-9781728-1535001?pd_rd_w=lOmV9&content-id=amzn1.sym.17b2b149-58e2-4824-ba79-851c5f351fdc&pf_rd_p=17b2b149-58e2-4824-ba79-851c5f351fdc&pf_rd_r=NTYQ9ARK4D0MCEKGBAVQ&pd_rd_wg=ScLv0&pd_rd_r=b76ae723-28a7-444d-9e6a-1e4d91773331&pd_rd_i=1524714682&psc=1"
                     target="_blank">Buy On Amazon!</a>
             </div>
         </div>
@@ -32,7 +32,7 @@
                 Karen M.McManus
             </div>
             <div class="buy">
-                <a href="https://www.amazon.ca/One-Us-Next-Sequel-Lying/dp/0525707964/ref=sr_1_1?crid=JV1UUMEMEBCA&keywords=one+of+us+is+next&qid=1659719025&s=books&sprefix=one+of+us+is+next%2Cstripbooks%2C97&sr=1-1"
+                <a href="https:/www.amazon.ca/One-Us-Next-Sequel-Lying/dp/0525707964/ref=sr_1_1?crid=JV1UUMEMEBCA&keywords=one+of+us+is+next&qid=1659719025&s=books&sprefix=one+of+us+is+next%2Cstripbooks%2C97&sr=1-1"
                     target="_blank">Buy On Amazon!</a>
             </div>
         </div>
