--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head>
    <meta name=" viewpoint" content="with=device-width, inital-scale=1.0">
    <title> Concinnity</title>
-   <link rel="stylesheet" href="//style.css">
+   <link rel="stylesheet" href="/style.css">
 </head>
 
 <body class="home">
-   <script id="replace_with_navbar" src="//nav.js"></script>
+   <script id="replace_with_navbar" src="/nav.js"></script>
    <script src="./dropdown.js"></script>
 
    <div class="boring">
