--- a/bookrec/romance.html
+++ b/bookrec/romance.html
@@ -37,3 +37,22 @@
             </div>
         </div>
     </div>
+    <div class="book">
+        <div class="cover">
+            <img src="bookcovers/all-your-perfects.jpg" />
+        </div>
+        <div class="info">
+            <div class="title">
+                All Your Perfects
+            </div>
+            <div class=" author">
+                Colleen Hoover
+            </div>
+            <div class="buy">
+                <a href="https://www.amazon.ca/All-Your-Perfects-Colleen-Hoover/dp/1501193325/ref=sr_1_1?keywords=all+your+perfects&qid=1659735531&sr=8-1"
+                    target="_blank">Buy On Amazon!</a>
+            </div>
+        </div>
+
+    </div>
+</div>
