--- a/nav.html
+++ b/nav.html
@@ -3,6 +3,14 @@
 </section>
 <ul class="nav">
     <li class="nav-item dropdown">
+        <a href="javascript:void(0)" class="dropbtn">Home</a>
+        <div class="dropdown-content categories">
+            <a href="/home.html">Home Page</a>
+            <a href="/about.html">About</a>
+            <a href="/contact.html">Contact Me</a>
+        </div>
+    </li>
+    <li class="nav-item dropdown">
         <a href="javascript:void(0)" class="dropbtn">My Work</a>
         <div class="dropdown-content categories">
             <a href="/mywork/?category=testing">To Be Added...</a>
